Fix code wrap, deep link to Slack, header links

--- a/site/_scss/site/common/_type.scss
+++ b/site/_scss/site/common/_type.scss
@@ -45,6 +45,7 @@ pre {
   padding-bottom: 5px;
   padding-left: 5px;
   padding-right: 5px;
+  white-space: pre-wrap;
 
 
   // Account for some code outputs that place code tags in pre tags
